fix: overflow en review-list

--- a/Frontend/src/app/components/review-list/review-list.component.css
+++ b/Frontend/src/app/components/review-list/review-list.component.css
@@ -1,6 +1,6 @@
 .list-container {
     max-height: 400px;
-    overflow-x: scroll;
+    overflow-y: scroll;
 }
 
 h1, h2, h3, h4, h5 {
